Fix youtube video overlap

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -20,6 +20,7 @@ main {
     height: 70px;
     position: fixed;
     top: 0;
+    z-index: 100;
 }
 
 .nav-items {
